--- a/Accounts.Xinator.csproj
+++ b/Accounts.Xinator.csproj
@@ -63,15 +63,85 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include=".gitignore" />
     <Content Include="AuthUser.aspx" />
+    <Content Include="css\all.css" />
+    <Content Include="css\all.min.css" />
+    <Content Include="css\bootsrap\bootstrap-grid.css" />
+    <Content Include="css\bootsrap\bootstrap-grid.min.css" />
+    <Content Include="css\bootsrap\bootstrap-grid.rtl.css" />
+    <Content Include="css\bootsrap\bootstrap-grid.rtl.min.css" />
+    <Content Include="css\bootsrap\bootstrap-reboot.css" />
+    <Content Include="css\bootsrap\bootstrap-reboot.min.css" />
+    <Content Include="css\bootsrap\bootstrap-reboot.rtl.css" />
+    <Content Include="css\bootsrap\bootstrap-reboot.rtl.min.css" />
+    <Content Include="css\bootsrap\bootstrap-utilities.css" />
+    <Content Include="css\bootsrap\bootstrap-utilities.min.css" />
+    <Content Include="css\bootsrap\bootstrap-utilities.rtl.css" />
+    <Content Include="css\bootsrap\bootstrap-utilities.rtl.min.css" />
+    <Content Include="css\bootsrap\bootstrap.css" />
+    <Content Include="css\bootsrap\bootstrap.min.css" />
+    <Content Include="css\bootsrap\bootstrap.rtl.css" />
+    <Content Include="css\bootsrap\bootstrap.rtl.min.css" />
+    <Content Include="css\customdatatables.css" />
+    <Content Include="css\datatable\dataTables.bootstrap5.min.css" />
+    <Content Include="css\fontawesome\font-awesome.css" />
+    <Content Include="css\fontawesome\font-awesome.min.css" />
+    <Content Include="css\icon\all.css" />
+    <Content Include="css\icon\all.min.css" />
+    <Content Include="css\icon\brands.css" />
+    <Content Include="css\icon\brands.min.css" />
+    <Content Include="css\icon\fontawesome.css" />
+    <Content Include="css\icon\fontawesome.min.css" />
+    <Content Include="css\icon\regular.css" />
+    <Content Include="css\icon\regular.min.css" />
+    <Content Include="css\icon\solid.css" />
+    <Content Include="css\icon\solid.min.css" />
+    <Content Include="css\icon\svg-with-js.css" />
+    <Content Include="css\icon\svg-with-js.min.css" />
+    <Content Include="css\icon\v4-shims.css" />
+    <Content Include="css\icon\v4-shims.min.css" />
+    <Content Include="css\owlcarousel\owl.carousel.min.css" />
+    <Content Include="css\owlcarousel\owl.theme.default.min.css" />
+    <Content Include="css\poppins.css" />
+    <Content Include="css\responsive.css" />
+    <Content Include="css\StepProgress.css" />
+    <Content Include="css\style.css" />
+    <Content Include="css\xxStepProgress.css" />
     <Content Include="Error.aspx" />
+    <Content Include="ErrorLog\Log.txt" />
     <Content Include="FeatureTour.aspx" />
     <Content Include="FeatureTourCA.aspx" />
     <Content Include="FeatureTourHD.aspx" />
     <Content Include="FeatureTourPRO.aspx" />
+    <Content Include="fonts\fontawesome-webfont.svg" />
+    <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="img\favicon.ico" />
+    <Content Include="img\home\homebg1.jpg" />
+    <Content Include="img\home\homebg1old.jpg" />
+    <Content Include="img\logo\central.png" />
+    <Content Include="img\logo\servco.png" />
+    <Content Include="js\aos.js" />
+    <Content Include="js\bootstrap\bootstrap.bundle.js" />
+    <Content Include="js\bootstrap\bootstrap.bundle.min.js" />
+    <Content Include="js\bootstrap\bootstrap.esm.js" />
+    <Content Include="js\bootstrap\bootstrap.esm.min.js" />
+    <Content Include="js\bootstrap\bootstrap.js" />
+    <Content Include="js\bootstrap\bootstrap.min.js" />
+    <Content Include="js\customjs.js" />
+    <Content Include="js\custom_datatables.js" />
+    <Content Include="js\datatables\dataTables.bootstrap5.min.js" />
+    <Content Include="js\datatables\jquery.dataTables.min.js" />
+    <Content Include="js\jquery.simple-scroll-follow.min.js" />
+    <Content Include="js\jquery\jquery-3.5.1.js" />
+    <Content Include="js\jquery\jquery-3.5.1.min.js" />
+    <Content Include="js\main.js" />
+    <Content Include="js\owlcarousel\owl.carousel.min.js" />
+    <Content Include="js\stellar.min.js" />
     <Content Include="KeepSessionAlive.aspx" />
     <Content Include="Login.aspx" />
     <Content Include="Logout.aspx" />
+    <Content Include="README.md" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -145,6 +215,43 @@
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="css\bootsrap\bootstrap-grid.css.map" />
+    <Content Include="css\bootsrap\bootstrap-grid.min.css.map" />
+    <Content Include="css\bootsrap\bootstrap-grid.rtl.css.map" />
+    <Content Include="css\bootsrap\bootstrap-grid.rtl.min.css.map" />
+    <Content Include="css\bootsrap\bootstrap-reboot.css.map" />
+    <Content Include="css\bootsrap\bootstrap-reboot.min.css.map" />
+    <Content Include="css\bootsrap\bootstrap-reboot.rtl.css.map" />
+    <Content Include="css\bootsrap\bootstrap-reboot.rtl.min.css.map" />
+    <Content Include="css\bootsrap\bootstrap-utilities.css.map" />
+    <Content Include="css\bootsrap\bootstrap-utilities.min.css.map" />
+    <Content Include="css\bootsrap\bootstrap-utilities.rtl.css.map" />
+    <Content Include="css\bootsrap\bootstrap-utilities.rtl.min.css.map" />
+    <Content Include="css\bootsrap\bootstrap.css.map" />
+    <Content Include="css\bootsrap\bootstrap.min.css.map" />
+    <Content Include="css\bootsrap\bootstrap.rtl.css.map" />
+    <Content Include="css\bootsrap\bootstrap.rtl.min.css.map" />
+    <Content Include="fonts\fontawesome-webfont.eot" />
+    <Content Include="fonts\fontawesome-webfont.ttf" />
+    <Content Include="fonts\fontawesome-webfont.woff" />
+    <Content Include="fonts\fontawesome-webfont.woff2" />
+    <Content Include="fonts\FontAwesome.otf" />
+    <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="fonts\poppins\poppins-bold-webfont.woff" />
+    <Content Include="fonts\poppins\poppins-bold-webfont.woff2" />
+    <Content Include="fonts\poppins\poppins-medium-webfont.woff" />
+    <Content Include="fonts\poppins\poppins-medium-webfont.woff2" />
+    <Content Include="fonts\poppins\poppins-regular-webfont.woff" />
+    <Content Include="fonts\poppins\poppins-regular-webfont.woff2" />
+    <Content Include="js\bootstrap\bootstrap.bundle.js.map" />
+    <Content Include="js\bootstrap\bootstrap.bundle.min.js.map" />
+    <Content Include="js\bootstrap\bootstrap.esm.js.map" />
+    <Content Include="js\bootstrap\bootstrap.esm.min.js.map" />
+    <Content Include="js\bootstrap\bootstrap.js.map" />
+    <Content Include="js\bootstrap\bootstrap.min.js.map" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
