--- a/Web.Debug.config
+++ b/Web.Debug.config
@@ -3,28 +3,14 @@
 <!-- For more information on using web.config transformation visit https://go.microsoft.com/fwlink/?LinkId=125889 -->
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-  <!--
-    In the example below, the "SetAttributes" transform will change the value of 
-    "connectionString" to use "ReleaseSQLServer" only when the "Match" locator 
-    finds an attribute "name" that has a value of "MyDB".
-    
-    <connectionStrings>
-      <add name="MyDB" 
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True" 
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    </connectionStrings>
-  -->
-  <system.web>
-    <!--
-      In the example below, the "Replace" transform will replace the entire 
-      <customErrors> section of your web.config file.
-      Note that because there is only one customErrors section under the 
-      <system.web> node, there is no need to use the "xdt:Locator" attribute.
-      
-      <customErrors defaultRedirect="GenericError.htm"
-        mode="RemoteOnly" xdt:Transform="Replace">
-        <error statusCode="500" redirect="InternalError.htm"/>
-      </customErrors>
-    -->
-  </system.web>
+    <appSettings>
+        <add key="ConnString" value="Data Source=.;Initial Catalog=XinatorCentral;Integrated Security=True; Connect Timeout=600; MultipleActiveResultSets=true;" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+        <add key="BaseUrl" value="https://localhost:3009/Login.aspx" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+        <add key="LogoutReturnUrl" value="https://localhost:3009/XinatorCentral/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+    </appSettings>
+    <system.web>
+        <compilation xdt:Transform="SetAttributes(debug)" debug="true" />
+        <!-- Ensure custom errors are off for easier debugging locally -->
+        <customErrors mode="Off" xdt:Transform="SetAttributes(mode)"/>
+    </system.web>
 </configuration>
