[Update] Added more description to understand the developer

--- a/Web.config
+++ b/Web.config
@@ -22,6 +22,8 @@
             <!--
                 Below string will be set by transformation in publish project
                 The transformation only works on publish project
+                Do not change the below section.
+                If your are in development in your PC then uncomment the Developement Section
             -->
 
             <add key="ConnString" value="" />
