[Add] Added SMTP configuration

--- a/Web.Release.config
+++ b/Web.Release.config
@@ -8,6 +8,13 @@
         <add key="BaseUrl" value="https://testsite.myserviceforce.com/AccountsXinator/Login.aspx" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
         <add key="LogoutReturnUrl" value="https://testsite.myserviceforce.com/XinatorCentral/AdminServices/Logout.aspx" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     </appSettings>
+    <system.net>
+        <mailSettings>
+            <smtp from="support@myserviceforce.com">
+                <network host="smtp.mailgun.org" port="587" userName="postmaster@mg.myserviceforce.com" password="mSFmailgun123" enableSsl="true" />
+            </smtp>
+        </mailSettings>
+    </system.net>
     <system.web>
         <compilation xdt:Transform="RemoveAttributes(debug)" />
         <!-- Set custom errors to RemoteOnly for production to hide detailed errors from end-users -->
