--- a/Web.config
+++ b/Web.config
@@ -17,6 +17,13 @@
             </files>
         </defaultDocument>
     </system.webServer>
+    <system.net>
+        <mailSettings>
+            <smtp from="support@myserviceforce.com">
+                <network host="smtp.mailgun.org" port="587" userName="postmaster@mg.myserviceforce.com" password="mSFmailgun123" enableSsl="true" />
+            </smtp>
+        </mailSettings>
+    </system.net>
     <appSettings>
         <!-- Set by transformation -->
             <!--
